# RK2

./: #include <iostream>  CMakeLists.txt  CPack.cmake  ConceptualExample.cpp  DynamicShapes.cpp  StaticShapes.cpp  tests.cpp
.github/workflows/: CPack.yml  action.yml  actions.yml
Resources/: README.md
_build/: CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  Shapes
